<resources>
    <string name="app_name">Trail Mapper</string>

    <string name="title">Title</string>
    <string name="title_map">Map</string>
    <string name="title_explore">Explore</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_map_settings">Map Settings</string>
    <string name="title_ui_settings">UI Settings</string>
    <string name="title_gesture_settings">Gesture Settings</string>
    <string name="title_offline">Offline</string>
    <string name="title_downloading">Downloading…</string>

    <string name="prompt_click">Click to view…</string>
    <string name="prompt_map_name">Map Name…</string>
    <string name="prompt_no_image_selected">No image selected…</string>
    <string name="msg_same_name">You can\'t make two maps with the same name!</string>
    <string name="msg_getting_location">Searching for location…</string>

    <string name="action_view">View</string>
    <string name="action_get_directions">Get Directions</string>
    <string name="action_save">Save Offline</string>
    <string name="action_delete">Remove</string>
    <string name="action_select_image">Select Image</string>
    <string name="action_take_picture">Take Picture</string>

    <string name="setting_traffic">Show Traffic</string>
    <string name="setting_buildings">Show Buildings</string>
    <string name="setting_location">Show Location on Map</string>
    <string name="setting_compass">Display Compass Icon</string>
    <string name="setting_toolbar">Show Toolbar</string>
    <string name="setting_location_button">Show Location Button</string>
    <string name="setting_zoom_controls">Display Zoom Controls</string>
    <string name="setting_rotation_gestures">Enable Rotation Gestures</string>
    <string name="setting_tilt_gestures">Enable Tilt Gestures</string>
    <string name="setting_zoom_gestures">Enable Zoom Gestures</string>
    <string name="action_new_map">New Map</string>
</resources>
