<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="james.trailmapper.TrailMapper" />

        <import type="android.support.v7.widget.SwitchCompat" />

        <variable
            name="trailMapper"
            type="TrailMapper" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="12dp"
        android:paddingTop="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/title_map_settings"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isTrafficEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setTrafficEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_traffic" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isBuildingsEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setBuildingsEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_buildings" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isLocationEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setLocationEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_location" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/title_ui_settings"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isCompassEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setCompassEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_compass" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isLocationButtonEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setLocationButtonEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_location_button" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isZoomControlsEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setZoomControlsEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_zoom_controls" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                app:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:paddingTop="12dp"
                        android:text="@string/title_gesture_settings"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isRotateGestureEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setRotateGestureEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_rotation_gestures" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isTiltGestureEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setTiltGestureEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_tilt_gestures" />

                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{trailMapper.isZoomGestureEnabled()}"
                        android:onClick="@{(view) -> trailMapper.setZoomGestureEnabled(TrailMapper.castToSwitch(view).isChecked())}"
                        android:padding="12dp"
                        android:text="@string/setting_zoom_gestures" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</layout>