<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_map_name"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary"
                android:textSize="26sp" />

        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/prompt_no_image_selected"
                android:textColor="?android:textColorSecondary"
                android:textSize="14sp" />

            <james.trailmapper.views.RatioImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@android:color/transparent" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/selectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select_image" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/takePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_take_picture" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>